--- a/package.json
+++ b/package.json
@@ -9,19 +9,42 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
+    "@0glabs/0g-serving-broker": "^0.7.1",
+    "@0glabs/0g-ts-sdk": "^0.3.3",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@tanstack/react-query": "^5.90.21",
+    "better-sqlite3": "^12.6.2",
+    "date-fns": "^4.1.0",
+    "ethers": "^6.16.0",
+    "framer-motion": "^11.18.2",
+    "nanoid": "^5.1.6",
+    "next": "15.5.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "viem": "^2.46.2",
+    "wagmi": "^2.19.5",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "15.5.12",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "blake-hash",
+      "es5-ext",
+      "bufferutil",
+      "keccak",
+      "utf-8-validate"
+    ]
   }
 }
