--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Abobi — Your Pidgin AI Bro",
-  "short_name": "Abobi",
-  "description": "Decentralized Pidgin-speaking AI bro. Privacy-first, Web3-native.",
+  "name": "Abobi Legal — AI Immigration Advisor",
+  "short_name": "Abobi Legal",
+  "description": "Multilingual AI immigration advisor. Visa guidance, asylum support, and document storage — powered by 0G decentralized compute.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0D0520",
-  "theme_color": "#4C1D95",
+  "background_color": "#F8FAFC",
+  "theme_color": "#DC2626",
   "orientation": "portrait-primary",
   "icons": [
     {
@@ -21,6 +21,6 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["productivity", "utilities"],
-  "lang": "en-NG"
+  "categories": ["productivity", "utilities", "legal"],
+  "lang": "en"
 }
